--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /FirstWebApp/.vs
 /FirstWebApp/FirstWebApp/bin
 /FirstWebApp/FirstWebApp/obj
+/FirstMVCApp/.vs/FirstMVCApp
+/FirstMVCApp/FirstMVCApp/bin/Debug/net7.0
+/FirstMVCApp/FirstMVCApp/obj
