--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /FirstMVCApp/.vs/FirstMVCApp
 /FirstMVCApp/FirstMVCApp/bin/Debug/net7.0
 /FirstMVCApp/FirstMVCApp/obj
+/FirstMVCApp/.vs/ProjectEvaluation
