--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /FirstMVCApp/FirstMVCApp/bin/Debug/net7.0
 /FirstMVCApp/FirstMVCApp/obj
 /FirstMVCApp/.vs/ProjectEvaluation
+/IdentityApp/.vs/IdentityApp
+/IdentityApp/IdentityApp/bin/Debug/net8.0
+/IdentityApp/IdentityApp/obj
