--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /IdentityApp/.vs/IdentityApp
 /IdentityApp/IdentityApp/bin/Debug/net8.0
 /IdentityApp/IdentityApp/obj
+/RolesApp/.vs/RolesApp
+/RolesApp/RolesApp/bin/Debug/net8.0
+/RolesApp/RolesApp/obj
