--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 /RolesApp/RolesApp/bin/Debug/net8.0
 /RolesApp/RolesApp/obj
 /RolesApp/.vs/ProjectEvaluation
+/Lambda1App/.vs/Lambda1App
+/Lambda1App/Lambda1App/bin/Debug/net8.0
+/Lambda1App/Lambda1App/obj
+/LambdaApp
