--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /Lambda1App/Lambda1App/bin/Debug/net8.0
 /Lambda1App/Lambda1App/obj
 /LambdaApp
+/LinqApp/.vs/LinqApp
+/Lambda1App/.vs/ProjectEvaluation
+/LinqApp/LinqApp/bin/Debug/net8.0
+/LinqApp/LinqApp/obj
