--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /Lambda1App/.vs/ProjectEvaluation
 /LinqApp/LinqApp/bin/Debug/net8.0
 /LinqApp/LinqApp/obj
+/ChatApp/.vs/ChatApp
+/ChatApp/ChatApp/bin/Debug/net8.0
+/ChatApp/ChatApp/obj
