--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 /ChatApp/ChatApp/obj
 /MoveShape
 /WhiteBoard
+/WebApiApp/.vs/WebApiApp
+/WebApiApp/WebApiApp/bin/Debug/net8.0
+/WebApiApp/WebApiApp/obj
